removed icons in 'About' section; added email button

--- a/index.html
+++ b/index.html
@@ -88,12 +88,14 @@
 
                     </div>
                   </div>
-
-
-
-
-
-
+                  <div class="text-left">
+                    <a
+                      class="button btn btn-light px-5 py-1.5 sayhi"
+                      href="mailto:mackenzie.wentworth88@gmail.com"
+                      target="_top"
+                      >Inquire Here!</a
+                    >
+                  </div>
                 <!-- <img class="img-fluid img-profile mx-auto mb-2" src="assets/img/profile.jpeg" alt="..." /> -->
                 <!-- <img src="assets/img/profile.jpeg" class="img-thumbnail" alt="Thumbnail Image"> -->
                 <!-- <p class="subheading mb-3">I'm a Full-Stack JavaScript Web Developer.
@@ -102,12 +104,12 @@
                     a meticulous approach and adaptability.</p>
                 <p class="lead mb-4">Aside from exercising my coding skills, I love pursuing my passions in flowers, new
                     recipes, and wellness. </p> -->
-                <div class="social-icons">
+                <!-- <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/mackenzie-wentworth/"><i
                             class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="https://github.com/mackenzie-wentworth"><i
                             class="fab fa-github"></i></a>
-                </div>
+                </div> -->
             </div>
         </section>
         <hr class="m-0" />
@@ -300,6 +302,8 @@
                     <div class="flex-shrink-0"><span class="text-primary">August ? - May ?</span></div>
                 </div>
             </div>
+
+            
         </section>
 
         <hr class="m-0" />
