added content to 'Contact' section; need to adjust styling still

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Resume - Start Bootstrap Theme</title>
+    <title>MacKenzie Wentworth Portfolio</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -61,7 +61,7 @@
             <div class="resume-section-content">
                 <!-- <h1 class="text-primary mb-0">
                     MacKenzie Wentworth -->
-                    <!-- <span class="text-primary">Wentworth</span> -->
+                <!-- <span class="text-primary">Wentworth</span> -->
                 <!-- </h1> -->
                 <!-- <div id="contact-info" class="subheading mb-5">
                     Raleigh, NC · (262) 391-5197 ·
@@ -71,31 +71,29 @@
                     <div class="row">
                         <div class="col-xl-6 col-lg-6 col-md-6">
                             <h2 class="text-primary mb-0">
-                               Hi, I'm MacKenzie Wentworth
+                                Hi, I'm MacKenzie Wentworth
                                 <!-- <span class="text-primary">Wentworth</span> -->
                             </h2>
                             <div id="contact-info" class="subheading mb-5">
                                 I'm a Full-Stack JavaScript Developer.
                             </div>
-                            <p class="lead">Inspired to bring ideas to life and deliver customer-centric solutions. Specializing in
+                            <p class="lead">Inspired to bring ideas to life and deliver customer-centric solutions.
+                                Specializing in
                                 a meticulous approach and adaptability.</p>
-                            <p class="lead mb-4">Aside from exercising my coding skills, I love pursuing my passions in flowers, new
+                            <p class="lead mb-4">Aside from exercising my coding skills, I love pursuing my passions in
+                                flowers, new
                                 recipes, and wellness. </p>
-                          </div>
-                      <div class="col-xl-6 col-lg-6 col-md-6">
-                        <img src="assets/img/profile.jpeg" alt="responsive webite" class="img-fluid">
-                      </div>
+                        </div>
+                        <div class="col-xl-6 col-lg-6 col-md-6">
+                            <img src="assets/img/profile.jpeg" alt="responsive webite" class="img-fluid">
+                        </div>
 
                     </div>
-                  </div>
-                  <div class="text-left">
-                    <a
-                      class="button btn btn-light px-5 py-1.5 sayhi"
-                      href="mailto:mackenzie.wentworth88@gmail.com"
-                      target="_top"
-                      >Inquire Here!</a
-                    >
-                  </div>
+                </div>
+                <div class="text-left">
+                    <a class="button btn btn-light px-5 py-1.5" href="mailto:mackenzie.wentworth88@gmail.com"
+                        target="_top">Inquire Here!</a>
+                </div>
                 <!-- <img class="img-fluid img-profile mx-auto mb-2" src="assets/img/profile.jpeg" alt="..." /> -->
                 <!-- <img src="assets/img/profile.jpeg" class="img-thumbnail" alt="Thumbnail Image"> -->
                 <!-- <p class="subheading mb-3">I'm a Full-Stack JavaScript Web Developer.
@@ -135,6 +133,8 @@
             </div>
         </section>
         <hr class="m-0" />
+
+
 
         <!-- Skills Section -->
         <section class="resume-section" id="skills">
@@ -281,6 +281,46 @@
         </section>
         <hr class="m-0" />
 
+        <!-- Contact Section -->
+        <section class="contact-section" id="contact">
+
+            <!--Section heading-->
+            <h2 class="mb-5">Contact</h2>
+            <p class="w-responsive mx-auto mb-5">Let's Connect!</p>
+
+                <!--Grid column-->
+                <div class="col-md-3 text-center">
+                    <ul class="list-unstyled mb-0">
+                        <li><i class="fas fa-map-marker-alt fa-2x"></i>
+                            <p>Raleigh, NC 27604, USA</p>
+                        </li>
+
+                        <li><i class="fas fa-phone mt-4 fa-2x"></i>
+                            <p>262 391 5197</p>
+                        </li>
+
+                        <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                            <p>mackenzie.wentworth88@gmail.com</p>
+                        </li>
+                        <div class="social-icons">
+                            <a class="social-icon" href="https://www.linkedin.com/in/mackenzie-wentworth/"><i
+                                    class="fab fa-linkedin-in"></i></a>
+                            <a class="social-icon" href="https://github.com/mackenzie-wentworth"><i
+                                    class="fab fa-github"></i></a>
+                        </div>
+                    </ul>
+                </div>
+                <!--Grid column-->
+
+            </div>
+
+
+            <!--Section: Contact v.2-->
+
+
+        </section>
+        <hr class="m-0" />
+
         <!-- Education-->
         <section class="resume-section" id="education">
             <div class="resume-section-content">
@@ -303,7 +343,7 @@
                 </div>
             </div>
 
-            
+
         </section>
 
         <hr class="m-0" />
