cleaned up code

--- a/index.html
+++ b/index.html
@@ -166,12 +166,7 @@
             <div class="container">
                 <!-- Portfolio Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
-                <!-- Icon Divider-->
-                <!-- <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
-                </div> -->
+
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
                     <!-- Portfolio Item 1-->
@@ -207,35 +202,7 @@
                             <img class="img-fluid" src="assets/img/portfolio/tech-blog-dashboard.png" alt="..." />
                         </div>
                     </div>
-                    <!-- Portfolio Item 4-->
-                    <!-- <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
-                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal4">
-                            <div
-                                class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i
-                                        class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="assets/img/portfolio/game.png" alt="..." />
-                        </div>
-                    </div> -->
-                    <!-- Portfolio Item 5-->
-                    <!-- <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
-                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal5">
-                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="assets/img/portfolio/safe.png" alt="..." />
-                        </div>
-                    </div> -->
-                    <!-- Portfolio Item 6-->
-                    <!-- <div class="col-md-6 col-lg-4">
-                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal6">
-                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="..." />
-                        </div>
-                    </div> -->
+
                 </div>
             </div>
         </section>
@@ -248,9 +215,9 @@
                 <h2 class="mb-5">Education</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">University of North Carolina Chapel Hill</h3>
-                        <div class="subheading mb-3">Programming Bootcamp</div>
-                        <div id="degree">Full Stack Web Development</div>
+                        <h3 class="mb-0">University of North Carolina, Chapel Hill</h3>
+                        <div class="subheading mb-3">Boot Camp Certificate</div>
+                        <div id="degree">Full-Stack Web Development</div>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">January 2023 - July 2023</span></div>
                 </div>
@@ -258,9 +225,9 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">University Of South Carolina</h3>
                         <div class="subheading mb-3">Bachelor of Arts</div>
-                        <div id="degree">Buisness Management</div>
+                        <div id="degree">Hospitality Management</div>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">August ? - May ?</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">January 2015 - May 2019</span></div>
                 </div>
             </div>
         </section>
@@ -301,6 +268,7 @@
         <hr class="m-0" />
 
         <!-- Portfolio Modals-->
+
         <!-- Portfolio Modal 1-->
         <!-- peak-fitness -->
         <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" aria-labelledby="portfolioModal1"
@@ -357,6 +325,7 @@
             </div>
         </div>
         <!-- Portfolio Modal 2-->
+        <!-- code-thread -->
         <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" aria-labelledby="portfolioModal2"
             aria-hidden="true">
             <div class="modal-dialog modal-xl">
@@ -405,6 +374,7 @@
             </div>
         </div>
         <!-- Portfolio Modal 3-->
+        <!-- tech-blog -->
         <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" aria-labelledby="portfolioModal3"
             aria-hidden="true">
             <div class="modal-dialog modal-xl">
@@ -453,72 +423,6 @@
                 </div>
             </div>
         </div>
-        <!-- Portfolio Modal 4-->
-        <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" aria-labelledby="portfolioModal4"
-            aria-hidden="true">
-            <div class="modal-dialog modal-xl">
-                <div class="modal-content">
-                    <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal"
-                            aria-label="Close"></button></div>
-                    <div class="modal-body text-center pb-5">
-                        <div class="container">
-                            <div class="row justify-content-center">
-                                <div class="col-lg-8">
-                                    <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">JourneyVerse
-                                    </h2>
-                                    <!-- Icon Divider-->
-                                    <div class="divider-custom">
-                                        <div class="divider-custom-line"></div>
-                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                                        <div class="divider-custom-line"></div>
-                                    </div>
-                                    <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/game.png" alt="..." />
-                                    <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Link to Project: <a
-                                            href="https://github.com/pexApred/journeyVerse">JourneyVerse</a> </p>
-                                    <p class="mb-4">
-                                        JourneyVerse is a remarkable real-world full-stack MERN application,
-                                        meticulously crafted from scratch, that introduces a powerful collaboration
-                                        travel platform. Seamlessly combining Node.js, React.js, Apollo Client, Apollo
-                                        Server, GraphQL, MongoDB, and JWT Authentication, this app enables users to
-                                        efficiently manage logistics for their upcoming trips while finding like-minded
-                                        travel companions. The integration of Apollo GraphQL ensures efficient data
-                                        communication between the server and client, while JWT Authentication guarantees
-                                        secure user access. Hosted on Heroku, this feature-rich and user-friendly app
-                                        showcases our expertise in creating cutting-edge applications that deliver an
-                                        exceptional travel planning and companionship experience.</p>
-                                    <button class="btn btn-primary" data-bs-dismiss="modal">
-                                        <i class="fas fa-xmark fa-fw"></i>
-                                        Close Window
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Portfolio Modal 5-->
-        <!-- <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" aria-labelledby="portfolioModal5" aria-hidden="true">
-            <div class="modal-dialog modal-xl">
-                <div class="modal-content">
-                    <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
-                    <div class="modal-body text-center pb-5">
-                        <div class="container">
-                            <div class="row justify-content-center">
-                                <div class="col-lg-8">
- 
-     Portfolio Modal 6
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" aria-labelledby="portfolioModal6" aria-hidden="true">
-            <div class="modal-dialog modal-xl">
-                <div class="modal-content">
-                    <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
-                    <div class="modal-body text-center pb-5">
-                        <div class="container">
-                            <div class="row justify-content-center">
-                                <div class="col-lg-8">-->
 
     </div>
     <!-- Bootstrap core JS-->
