edited 'about' section text details

--- a/index.html
+++ b/index.html
@@ -69,13 +69,15 @@
                                 <!-- <span class="text-primary">Wentworth</span> -->
                             </h2>
                             <div id="contact-info" class="subheading mb-5">
-                                I'm a Full-Stack JavaScript Developer.
+                                I'm a Full-Stack Web Developer.
                             </div>
                             <p class="lead">
-                                Inspired to bring ideas to life and deliver customer-centric solutions. Specializing in a meticulous approach and adaptability.
+                                Inspired to bring ideas to life and deliver customer-centric solutions. Specializing in 
+                                <b><span class="text-primary">JavaScript</span></b>
+                                with a meticulous approach and adaptability.
                             </p>
                             <p class="lead mb-4">
-                                Aside from exercising my coding skills, I love pursuing my passions in flowers, new recipes, and wellness.
+                                Aside from exercising my coding skills, I love pursuing my passions in flowers, new recipes, and wellness. Lifelong long learner with multifaceted capabilities.
                             </p>
                             <p class="lead mb-4">
                                 For inquiries, email me at
