adjusted naming conventions and organized code better to help format

--- a/index.html
+++ b/index.html
@@ -59,25 +59,25 @@
     <div class="container-fluid p-0">
 
         <!-- About Section -->
-        <section class="resume-section" id="about">
-            <div class="resume-section-content">
+        <section class="section-details" id="about">
+            <div class="section-details-content">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-8">
                             <h2 class="text-primary mb-0">
-                                Hi, I'm MacKenzie Wentworth
-                                <!-- <span class="text-primary">Wentworth</span> -->
+                                Hi, I'm MacKenzie Wentworth.
                             </h2>
                             <div id="contact-info" class="subheading mb-5">
                                 I'm a Full-Stack Web Developer.
                             </div>
                             <p class="lead">
-                                Inspired to bring ideas to life and deliver customer-centric solutions. Specializing in 
+                                Inspired to bring ideas to life and deliver customer-centric solutions. Specializing in
                                 <b><span class="text-primary">JavaScript</span></b>
                                 with a meticulous approach and adaptability.
                             </p>
                             <p class="lead mb-4">
-                                Aside from exercising my coding skills, I love pursuing my passions in flowers, new recipes, and wellness. Lifelong long learner with multifaceted capabilities.
+                                Aside from exercising my coding skills, I love pursuing my passions in flowers, new
+                                recipes, and wellness. Lifelong learner with multifaceted capabilities.
                             </p>
                             <p class="lead mb-4">
                                 For inquiries, email me at
@@ -100,15 +100,15 @@
     <hr class="m-0" />
 
     <!-- Skills Section -->
-    <section class="resume-section" id="skills">
-        <div class="resume-section-content">
+    <section class="section-details" id="skills">
+        <div class="section-details-content">
+            <!-- Skills Section Heading-->
             <h2 class="mb-5">Skills</h2>
-            <div class="resume-section-content">
-                <div class="container-fluid">
 
-                    <!-- Programming Langauges & Tools -->
+                <!-- Programming Langauges & Tools -->
+                <div class="container-fluid">
+                    <div class="subheading mb-3">Programming Languages & Tools</div>
                     <div class="row">
-                        <div class="subheading mb-3">Programming Languages & Tools</div>
                         <!-- first column -->
                         <div class="col-sm">
                             <div>
@@ -145,14 +145,17 @@
                     </div>
                 </div>
                 <!-- Workflow -->
-                <div class="text-left">
+                <div class="container-fluid">
                     <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Responsive Design</li>
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Agile Problem Solver</li>
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Remote Collaboration</li>
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Version Control</li>
-                    </ul>
+                    <div class="col-sm">
+                        <ul class="fa-ul mb-0">
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>Responsive Design</li>
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>Agile Problem Solver</li>
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>Remote Collaboration</li>
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>Version Control</li>
+                        </ul>
+                    </div>
+
                 </div>
             </div>
     </section>
@@ -160,10 +163,10 @@
     <hr class="m-0" />
 
     <!-- Portfolio Section-->
-    <section class="page-section portfolio" id="portfolio">
+    <section class="section-details portfolio" id="portfolio">
         <div class="container">
             <!-- Portfolio Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
+            <h2 class="mb-5">Portfolio</h2>
 
             <!-- Portfolio Grid Items-->
             <div class="row justify-content-center">
@@ -208,8 +211,8 @@
     <hr class="m-0" />
 
     <!-- Education-->
-    <section class="resume-section" id="education">
-        <div class="resume-section-content">
+    <section class="section-details" id="education">
+        <div class="section-details-content">
             <h2 class="mb-5">Education</h2>
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-1">
@@ -233,7 +236,7 @@
     <hr class="m-0" />
 
     <!-- Contact Section -->
-    <section class="contact-section" id="contact">
+    <section class="section-details" id="contact">
 
         <!--Section heading-->
         <h2 class="mb-5">Contact</h2>
