cleaned up all columns in each section and re-formatted 'contact' section details

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#resume">Resume</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
-                <div class="social-icons">
+                <!-- <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/mackenzie-wentworth/"><i
                             class="fab fa-linkedin-in"></i></a>
                 </div>
                 <div class="social-icons">
                     <a class="social-icon" href="https://github.com/mackenzie-wentworth"><i
                             class="fab fa-github"></i></a>
-                </div>
+                </div> -->
 
             </ul>
         </div>
@@ -67,7 +67,7 @@
                             <h2 class="text-primary mb-0">
                                 Hi, I'm MacKenzie Wentworth.
                             </h2>
-                            <div id="contact-info" class="subheading mb-5">
+                            <div id="section-subtitle" class="subheading mb-5">
                                 I'm a Full-Stack Web Developer.
                             </div>
                             <p class="lead">
@@ -79,20 +79,23 @@
                                 Aside from exercising my coding skills, I love pursuing my passions in flowers, new
                                 recipes, and wellness. Lifelong learner with multifaceted capabilities.
                             </p>
-                            <p class="lead mb-4">
-                                For inquiries, email me at
-                                <a href="mackenzie.wentworth88@gmail.com">mackenzie.wentworth88@gmail.com</a>.
-                            </p>
                         </div>
                         <div class="col">
                             <img src="assets/img/profile.jpeg" alt="responsive webite" class="img-fluid">
                         </div>
-
+                        <p class="lead mb-4">
+                            For inquiries, please email me at
+                            <a href="mailto: mackenzie.wentworth88@gmail.com">mackenzie.wentworth88@gmail.com</a>
+                        </p>
+                        <div class="social-icons">
+                            <a class="social-icon" href="https://www.linkedin.com/in/mackenzie-wentworth/"><i
+                                    class="fab fa-linkedin-in"></i></a>
+                            <a class="social-icon" href="https://github.com/mackenzie-wentworth"><i
+                                    class="fab fa-github"></i></a>
+                        </div>
                     </div>
                 </div>
-                <div class="text-left">
 
-                </div>
             </div>
     </div>
     </section>
@@ -105,59 +108,59 @@
             <!-- Skills Section Heading-->
             <h2 class="mb-5">Skills</h2>
 
-                <!-- Programming Langauges & Tools -->
-                <div class="container-fluid">
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <div class="row">
-                        <!-- first column -->
-                        <div class="col-sm">
-                            <div>
-                                <ul class="fa-ul mb-0">
-                                    <li><span class="fa-li"><i class="fa-brands fa-js"></i></span>JavaScript (ES6)
-                                    </li>
-                                    <li><span class="fa-li"><i class="fab fa-html5"></i></span>HTML5</li>
-                                    <li><span class="fa-li"><i class="fab fa-css3-alt"></i></span>CSS</li>
-                                    <li><span class="fa-li"><i class="fa-solid fa-database"></i></span>SQL</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <!-- second column -->
-                        <div class="col-sm">
+            <!-- Programming Langauges & Tools -->
+            <div class="container-fluid">
+                <div class="subheading mb-3">Programming Languages & Tools</div>
+                <div class="row">
+                    <!-- first column -->
+                    <div class="col-sm">
+                        <div>
                             <ul class="fa-ul mb-0">
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Node.js</li>
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>React.js</li>
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>TypeScript</li>
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>MySQL</li>
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>MongoDB</li>
+                                <li><span class="fa-li"><i class="fa-brands fa-js"></i></span>JavaScript (ES6)
+                                </li>
+                                <li><span class="fa-li"><i class="fab fa-html5"></i></span>HTML5</li>
+                                <li><span class="fa-li"><i class="fab fa-css3-alt"></i></span>CSS</li>
+                                <li><span class="fa-li"><i class="fa-solid fa-database"></i></span>SQL</li>
                             </ul>
                         </div>
-                        <!-- third column -->
-                        <div class="col-sm">
-                            <ul class="fa-ul mb-0">
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>jQuery</li>
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>AJAX</li>
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>JSON</li>
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Bootstrap</li>
-                                <li><span class="fa-li"><i class="fas fa-check"></i></span>Git</li>
-                            </ul>
-                        </div>
-
                     </div>
-                </div>
-                <!-- Workflow -->
-                <div class="container-fluid">
-                    <div class="subheading mb-3">Workflow</div>
+                    <!-- second column -->
                     <div class="col-sm">
                         <ul class="fa-ul mb-0">
-                            <li><span class="fa-li"><i class="fas fa-check"></i></span>Responsive Design</li>
-                            <li><span class="fa-li"><i class="fas fa-check"></i></span>Agile Problem Solver</li>
-                            <li><span class="fa-li"><i class="fas fa-check"></i></span>Remote Collaboration</li>
-                            <li><span class="fa-li"><i class="fas fa-check"></i></span>Version Control</li>
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>Node.js</li>
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>React.js</li>
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>TypeScript</li>
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>MySQL</li>
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>MongoDB</li>
+                        </ul>
+                    </div>
+                    <!-- third column -->
+                    <div class="col-sm">
+                        <ul class="fa-ul mb-0">
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>jQuery</li>
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>AJAX</li>
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>JSON</li>
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>Bootstrap</li>
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>Git</li>
                         </ul>
                     </div>
 
                 </div>
             </div>
+            <!-- Workflow -->
+            <div class="container-fluid">
+                <div class="subheading mb-3">Workflow</div>
+                <div class="col-sm">
+                    <ul class="fa-ul mb-0">
+                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Responsive Design</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Agile Problem Solver</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Remote Collaboration</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Version Control</li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
     </section>
 
     <hr class="m-0" />
@@ -213,6 +216,7 @@
     <!-- Education-->
     <section class="section-details" id="education">
         <div class="section-details-content">
+            <!-- Education Section heading-->
             <h2 class="mb-5">Education</h2>
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-1">
@@ -236,38 +240,40 @@
     <hr class="m-0" />
 
     <!-- Contact Section -->
-    <section class="section-details" id="contact">
-
-        <!--Section heading-->
-        <h2 class="mb-5">Contact</h2>
-        <p class="w-responsive mx-auto mb-5">Let's Connect!</p>
-
-        <!--Grid column-->
-        <div class="col-md-3 text-center">
-            <ul class="list-unstyled mb-0">
-                <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                    <p>Raleigh, NC 27604, USA</p>
-                </li>
-
-                <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                    <p>262 391 5197</p>
-                </li>
-
-                <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                    <a href="mailto:mackenzie.wentworth88@gmail.com">mackenzie.wentworth88@gmail.com</a>
-                </li>
-                <div class="social-icons">
-                    <a class="social-icon" href="https://www.linkedin.com/in/mackenzie-wentworth/"><i
-                            class="fab fa-linkedin-in"></i></a>
-                    <a class="social-icon" href="https://github.com/mackenzie-wentworth"><i
-                            class="fab fa-github"></i></a>
+    <section class="section-details" id="about">
+        <div class="section-details-content">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm">
+                        <h2 class="text-primary mb-0">
+                            Contact Me.
+                        </h2>
+                        <div id="section-subtitle" class="subheading mb-5">
+                            Let's Connect!
+                        </div>
+                        <!-- Contact Methods -->
+                        <div class="subheading mb-5">
+                            Raleigh, NC · (262) 391-5197 ·
+                            <a href="mailto:mackenzie.wentworth88@gmail.com">mackenzie.wentworth88@gmail.com</a>
+                        </div>
+                    </div>
+                    <!-- social icons -->
+                    <div class="social-icons">
+                        <a class="social-icon" href="https://www.linkedin.com/in/mackenzie-wentworth/"><i
+                                class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/mackenzie-wentworth"><i
+                                class="fab fa-github"></i></a>
+                    </div>
                 </div>
-            </ul>
+            </div>
         </div>
-        <!--Grid column-->
+        </div>
     </section>
 
     <hr class="m-0" />
+
+    <!-- CONTACT SECTION TESTING -->
+
 
     <!-- Portfolio Modals-->
 
